--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<h1>This is a heading</h1>
+		<h1>Carlos James R. Miranda</h1>
 		<p>This is the first paragraph of text</p>
 		<hr />
 		<p>This is the second paragraph of the text</p>
